syntax = "proto3";

package iotfsdb;

import "google/protobuf/duration.proto";
import "enums.proto";
import "types.proto";

option java_package = "org.huebert.iotfsdb.api.grpc.proto";
option java_outer_classname = "SeriesServiceProto";

service SeriesService {
  rpc CloneSeries(CloneSeriesRequest) returns (CloneSeriesResponse);
  rpc CreateSeries(CreateSeriesRequest) returns (CreateSeriesResponse);
  rpc DeleteSeries(DeleteSeriesRequest) returns (DeleteSeriesResponse);
  rpc FindSeries(FindSeriesRequest) returns (FindSeriesResponse);
  rpc PruneSeries(PruneSeriesRequest) returns (PruneSeriesResponse);
  rpc UpdateDefinition(UpdateDefinitionRequest) returns (UpdateDefinitionResponse);
  rpc UpdateMetadata(UpdateMetadataRequest) returns (UpdateMetadataResponse);
}

message CloneSeriesRequest {
  string source_id = 1;
  string destination_id = 2;
  bool include_data = 3;
}

message CreateSeriesRequest {
  Series series = 1;
}

message DeleteSeriesRequest {
  string id = 1;
}

message FindSeriesRequest {
  SeriesCriteria criteria = 1;
}

message PruneSeriesRequest {
  string id = 1;
  TimeRange time_range = 2;
}

message UpdateDefinitionRequest {
  string id = 1;
  SeriesDefinition definition = 2;
}

message UpdateMetadataRequest {
  string id = 1;
  map<string, string> metadata = 2;
  bool merge = 3;
}

message CloneSeriesResponse {
  Status status = 1;
}

message CreateSeriesResponse {
  Status status = 1;
}

message DeleteSeriesResponse {
  Status status = 1;
}

message FindSeriesResponse {
  Status status = 1;
  repeated Series series = 2;
}

message PruneSeriesResponse {
  Status status = 1;
}

message UpdateDefinitionResponse {
  Status status = 1;
}

message UpdateMetadataResponse {
  Status status = 1;
}
